# careamics-napari

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example_ndv.py  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md  question.md
.github/workflows/: test_and_deploy.yml
.napari-hub/: DESCRIPTION.md
src/careamics_napari/: __init__.py  napari.yaml  prediction_plugin.py  sample_data.py  training_controller.py  training_plugin.py  training_widget.py
src/careamics_napari/careamics_utils/: __init__.py  algorithms.py  callback.py  configuration.py  free_memory.py  training_worker.py
src/careamics_napari/resources/: TF_legal_mention.txt  __init__.py  resources.py
src/careamics_napari/signals/: __init__.py  configuration_signal.py  configuration_signals.py  prediction_signal.py  prediction_status.py  saving_signal.py  saving_status.py  training_signal.py  training_status.py
src/careamics_napari/utils/: __init__.py  axes_utils.py  gpu_utils.py  path_utils.py
src/careamics_napari/widgets/: __init__.py  algorithm_choice.py  axes_widget.py  banner_widget.py  configuration.py  configuration_widget.py  configuration_window.py  data_selection_widget.py  expert_settings_widget.py  folder_widget.py  gpu_widget.py  magicgui_widgets.py  predict_data_widget.py  prediction_widget.py  progress_widget.py  qt_widgets.py  save_widget.py  saving_widget.py  scroll_wrapper.py  tbplot_widget.py  train_data_widget.py  train_progress_widget.py  training_configuration_widget.py  training_widget.py
src/careamics_napari/widgets/signals/: __init__.py  algorithm_signal.py  configuration_signal.py  training_status.py
src/careamics_napari/workers/: __init__.py  prediction_worker.py  saving_worker.py  training_worker.py
tests/: test_predictions.py  test_samples.py
tests/careamics_utils/: test_configuration.py
tests/resources/: test_resources.py
tests/widgets/: test_axes_widget.py
